@@ -1,0 +1,3 @@
+original log file line #1
+original log file line #2
+original log file line #3
